Changed domain of homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://craighaiss.github.io/react-weather-site/",
+  "homepage": "http://www.craighaiss.com/react-weather-site/",
   "name": "weather-site",
   "version": "0.1.0",
   "private": true,
